samples/_failures_safe/1761130503_95b9b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8254f3f.c:145:1: error: expected ‘{’ at end of input
  145 | int matrix_transpose(struct
      | ^~~
